<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/teamA" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/teamOnePoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:paddingTop="10dp"
                android:paddingBottom="40dp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/teamOne3Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/points3"
                    />
                <Button
                    android:id="@+id/teamOne2Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/points2"
                    />
                <Button
                    android:id="@+id/teamOneFreeThrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/freeThrow"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/teamB" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/teamTwoPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:paddingTop="10dp"
                android:paddingBottom="40dp"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/teamTwo3Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/points3"
                    />
                <Button
                    android:id="@+id/teamTwo2Points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/points2"
                    />
                <Button
                    android:id="@+id/teamTwoFreeThrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/freeThrow"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/reset"
        />
</LinearLayout>

